# benchbot-brain-app

./: .gitignore  README.md  benchbot-app.py  config.yaml  example-config.yaml  example_config.yaml  id_rsa.pub  initial_build.sh  install_dependencies.sh  main.py  manifest.json  package-lock.json  rebuild_and_install.sh
SVCam/: README.md  console_out.txt  img_saving_stats.txt
SVCam/ARM/CustomProgram/: main.cpp
SVCam/SVCam_Linux_ARM/SVCamKit/: console.txt
SVCam/SVCam_Linux_ARM/SVCamKit/CustomProgram/: main.cpp
SVCam/SVCam_Linux_ARM/SVCamKit/SVCamSample/: SVCamSample.cpp
SVCam/SVCam_Linux_ARM/SVCamKit/others/: 60-svcamkit-gev.conf
SVCam/SVCam_Linux_x86-64/: setup.sh
SVCam/SVCam_Linux_x86-64/SVCamKit/CustomProgram/: main.cpp
SVCam/SVCam_Linux_x86-64/SVCamKit/SVCamMiniExample/: sv_gen_sdk.h
SVCam/SVCam_Linux_x86-64/SVCamKit/Utils/: GigE_IPConfig  readme.txt
SVCam/SVCam_Linux_x86/SVCamKit/: Quick User Guide.txt
SVCam/SVCam_Linux_x86/SVCamKit/CustomProgram/: main.cpp  settings.txt
SVCam/SVCam_Linux_x86/SVCamKit/SVCamMiniExample/: main.cpp  sv_gen_sdk.h
SVCam/SVCam_Linux_x86/SVCamKit/SVCapture/: startSVCapture64.sh
SVCam/SVCam_Linux_x86/SVCamKit/camera/: Makefile  camera.cpp  camera.h  camera.py  main.cpp
SVCam/SVCam_Linux_x86/SVCamKit/camera_copy/: Makefile  camera.cpp  camera.h  main.cpp  setup_ld.bash
SVCam/SVCam_Linux_x86/SVCamKit/others/: svcamkit.conf  svcamkit_u3v_startup.service
SVCam/SVCapture2Setup_Linux64_ARM/: setup.sh
SVCam/SVCapture2Setup_Linux64_ARM/SVCamKit/: Quick User Guide.txt  console.txt  main_n.cpp
SVCam/SVCapture2Setup_Linux64_ARM/SVCamKit/CustomProgram/: Makefile
SVCam/SVCapture2Setup_Linux64_ARM/SVCamKit/SVCamAcquisition/: SVCamAcquisition.cpp
SVCam/SVCapture2Setup_Linux64_ARM/SVCamKit/SVCamMiniExample/: main.cpp
SVCam/SVCapture2Setup_Linux64_ARM/SVCamKit/others/: svcamkit.conf  svcamkit_u3v_startup.sh
SVCam/Samples/: SVCamFeature.cpp  SVCamFeature.h  SVCamSample.h  SVCamSampleDlg.cpp  SVCamSampleDlg.h
SVCam/x86/: README.md
SVCam/x86/CustomProgram/: Makefile  cam_setting.txt
SVCam/x86/camera/: Makefile  camera.h  camera_features.txt  main.cpp  sv_gen_sdk.h
SVCam/x86/camera_copy/: Makefile  main.cpp
SVCam/x86/camera_opencv/: camera.cpp  camera.h  camera_features.txt  main.cpp
SVCam/x86/cpp_pybind/: CMakeLists.txt  Makefile  main.cpp
SVCam/x86/cpp_pybind/src/: camera.cpp  camera.h  cvMattoNumpy.cpp  main.cpp
SVCam/x86/cpp_pybind/testing/: camera.py  change_settings.py  modified_features.json
api/: main.py  requirements.txt  wheels.py
api/common/: motors.py
brain_api/: log_config.ini  main.py  requirements.txt  test.py
brain_api/common/: logger.py  main.py  mini_comp_config.json  motor_controller.py  motor_controller_xz.py  motor_controller_y.py  motor_controller_y2.py  motors.py  network_config.sh  path_builder.py  test_y.py  track_config.json  track_follower.py  udp_config.json
brain_api/pose_record/: main.py  path_builder.py  track_follower.py
brain_api/rtk/: path_builder.py  robot_track.json  service_restart.py  track_follower.py
brain_api/rtk_pose/: main.py  path_builder.py  track_config.json  track_follower.py
front_end/: package-lock.json  package.json  vite.config.ts
front_end/src/: App.tsx
front_end/src/components/: BenchbotConfig.tsx  Button.tsx  ControlButtons.tsx  ExitButton.tsx  ImagePreview.tsx  Log.tsx  ManualControl.tsx  PotMap.tsx  Row.tsx  SnackBar.tsx  StatusBar.tsx
front_end/src/interfaces/: BenchBotTypes.ts
front_end/src/pages/: BenchbotConfig.tsx  CameraConfig.tsx  ManualControl.tsx  SpeciesMap.tsx  Traversal.tsx
front_end/src/utils/: api.ts  calculation.ts  configs.ts  constants.ts  functions.ts
mini_comp_api/: README.md  main.py  requirements.yml
mini_comp_api/camera_sdk/app/: CameraDevice.h  PropertyValueTable.h
mini_computer_api/: README.md  boot_on_launch.txt  data_transfer.sh  delete_copied_files.sh  delete_uploaded_images.sh  files_uploaded_to_globus.txt  init_transfer.sh  main.py  requirements.yml  setup.sh  usb-drive.rules
mini_computer_api/binding_copy/: CMakeLists.txt
mini_computer_api/binding_copy/app/: RemoteCli.h
mini_computer_api/binding_copy/app/CRSDK/: CrDeviceProperty.h
mini_computer_api/camera_sdk/: README.md  RemoteCli.cpp
mini_computer_api/camera_sdk/app/: RemoteCli.cpp
mini_computer_api/camera_sdk/app/CRSDK/: CameraRemote_SDK.h  CrError.h
mini_computer_api/resources/: camera.py  camera_controller.py  config.yaml  example_config.yaml
mini_computer_api/resources2/: camera_controller.py
mini_computer_api/sdk_binding/: CMakeLists.txt  sdk_test.py
mini_computer_api/sdk_binding/app/: Camera.cpp  Camera.h  RemoteCli.cpp  RemoteCli.h  main.cpp
mini_computer_api/sdk_binding/src/: main.cpp
mini_computer_api/sdk_lcm/camera/: CMakeLists.txt  README.md  messages.lcm  request.py  response.cpp
mini_computer_api/sdk_lcm/camera/app/: Camera.cpp  Camera.h  PropertyValueTable.cpp  response.cpp
mini_computer_api/sdk_lcm/camera/cmake/: FindLCM.cmake  enum_cli_hdr.cmake  (+1 more)
mini_computer_api/sdk_lcm/cpp/: listener  listener.cpp  main  main.cpp  sdk_from.lcm  sdk_to.lcm
mini_computer_api/sdk_lcm/pyth/: listener.py  main.py
mini_computer_api/sdk_library/: CMakeLists.txt  CMakeLists.txt.min
mini_computer_api/sdk_library/app/: Camera.cpp  Camera.h  CameraDevice.cpp  main.cpp
mini_computer_api/sdk_library/app/CRSDK/: CrDefines.h
mini_computer_api/sdk_library/cmake/: enum_cli_hdr.cmake
mini_computer_api/sdk_library/ctype/: Camera.cpp  Camera.h  ctypes_trial.py
mini_computer_api/sdk_library/src/: CMakeLists.txt  main.cpp
mini_computer_api/sdk_socket/: CMakeLists.txt  py_client.py  server  server.cpp
mini_computer_api/sdk_socket/app/: main.cpp
mini_computer_api/sdk_socket/example/: client.py
mini_computer_api/usb_transfer/: README.md  data_transfer.sh  delete_copied_files.sh  init_transfer.sh
ts/: package-lock.json
ts/src/: main.tsx
ts/src/components/: App.tsx  BenchbotConfig.tsx  Button.tsx  CameraConfig.tsx  ControlButtons.tsx  Log.tsx  ManualControl.tsx  Row.tsx
ts/src/utils/: api.ts  calculation.ts
(+17 files in other folders)
